# error-collector-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  KIRO_INTEGRATION.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SETUP.md  config.example.json  config.minimal.json  config.production.json  config_minimal.json  docker-compose.yml  pyproject.toml  quick_setup.py  setup.bat  setup.py  setup.sh  setup_kiro_integration.py  setup_repository.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/error-collector-mcp/: design.md  requirements.md  tasks.md
error_collector_mcp/: __init__.py  health.py  main.py  mcp_server.py  server.py
error_collector_mcp/collectors/: __init__.py  base_collector.py  browser_collector.py  browser_extension.py  shell_wrapper.py  terminal_collector.py
error_collector_mcp/config/: __init__.py  config_schema.json  config_schema.py  config_validator.py
error_collector_mcp/mcp_tools/: __init__.py  error_query_tool.py  error_statistics_tool.py  error_summary_tool.py
error_collector_mcp/models/: __init__.py  base_error.py  browser_error.py  error_summary.py  terminal_error.py
error_collector_mcp/services/: __init__.py  ai_summarizer.py  config_service.py  error_manager.py  integration_example.py  prompt_templates.py
error_collector_mcp/storage/: __init__.py  error_store.py  summary_store.py
tests/: __init__.py  conftest.py  test_ai_summarizer.py  test_browser_collector.py  test_config.py  test_config_service.py  test_error_manager.py  test_integration.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_storage.py  test_terminal_collector.py
